resolve flickering

--- a/client/assets/css/light.css
+++ b/client/assets/css/light.css
@@ -3487,3 +3487,7 @@ h2,h3 >  i {
   font-size: 100px;
   color: white;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
